--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -3,7 +3,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 20%;
 }
 
 header > a {
