--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,9 +1,8 @@
 header {
     background: linear-gradient(45deg, rgb(2, 143, 187), rgb(3, 37, 65));
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 20%;
 }
 
 header > a {
