--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -71,6 +71,7 @@
     border-radius: 15px;
     border: double gold thick;
     padding: 2%;
+    z-index: 1;
 }
 
 #login button, #login input::placeholder, #login input {
